fix: 修复FuzzySelect和MultiSelect遮挡问题，增强相似题目组件DarkMode适配

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./domainnamelogo.png" />
-    <link rel="apple-touch-icon" href="./domainnamelogo.png" />
-    <link rel="shortcut icon" type="image/png" href="./domainnamelogo.png" />
+    <link rel="icon" type="image/png" href="../frontend/public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" href="../frontend/public/avatar/avatar.png" />
+    <link rel="shortcut icon" type="image/png" href="../frontend/public/avatar/avatar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mareate QuestionBank</title>
     <meta name="description" content="企业数学题库管理平台" />
