🔧 修复网站图标配置和服务器部署问题
✨ 主要更新：
- 修复网站图标配置，支持多种设备和格式
- 优化Vite生产环境配置，使用绝对路径
- 完善Docker构建配置，确保图标文件正确复制
- 优化Nginx静态文件服务，提升图标加载性能
- 修复LaTeX编辑器滚动和对齐问题
- 优化相似题目检测模态框滚动体验
- 完善企业成员管理和权限系统
- 优化UI组件和页面性能

🚀 部署优化：
- 图标路径从相对路径改为绝对路径
- 添加静态文件缓存策略
- 确保Docker容器包含所有必要文件

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,15 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="../frontend/public/avatar/avatar.png" />
-    <link rel="apple-touch-icon" href="../frontend/public/avatar/avatar.png" />
-    <link rel="shortcut icon" type="image/png" href="../frontend/public/avatar/avatar.png" />
+    <!-- 网站图标配置 -->
+    <link rel="icon" type="image/png" href="/avatar/avatar.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/avatar/avatar.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/avatar/avatar.png" />
+    <link rel="apple-touch-icon" href="/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/avatar/avatar.png" />
+    <link rel="shortcut icon" type="image/png" href="/avatar/avatar.png" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mareate QuestionBank</title>
     <meta name="description" content="企业数学题库管理平台" />
