feat: 实现实时进度SSE和取消功能，优化Mathpix处理流程
- 新增SSE实时进度推送系统
- 实现文档处理取消功能
- 优化Mathpix PDF处理轮询机制
- 修复CORS配置支持X-Doc-Id请求头
- 改进前端进度显示精度和用户体验
- 新增答案生成服务(DeepSeek Reasoner)
- 优化LaTeX渲染和数学公式显示
- 修复多个UI/UX问题和bug

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <!-- 网站图标配置 -->
-    <link rel="icon" type="image/png" href="avatar/avatar.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="avatar/avatar.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="avatar/avatar.png" />
-    <link rel="apple-touch-icon" href="avatar/avatar.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="avatar/avatar.png" />
-    <link rel="shortcut icon" type="image/png" href="avatar/avatar.png" />
+    <link rel="icon" type="image/png" href="frontend/public/avatar/avatar.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="frontend/public/avatar/avatar.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="frontend/public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" href="frontend/public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="frontend/public/avatar/avatar.png" />
+    <link rel="shortcut icon" type="image/png" href="frontend/public/avatar/avatar.png" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
