--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,13 +6,24 @@
     <link rel="icon" type="image/png" href="/avatar/avatar.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/avatar/avatar.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/avatar/avatar.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/avatar/avatar.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/avatar/avatar.png" />
     <link rel="apple-touch-icon" href="/avatar/avatar.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/avatar/avatar.png" />
     <link rel="shortcut icon" type="image/png" href="/avatar/avatar.png" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="msapplication-TileColor" content="#4f46e5" />
+    <meta name="msapplication-TileImage" content="/avatar/avatar.png" />
+    <meta name="theme-color" content="#4f46e5" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mareate QuestionBank</title>
+    <title>MareateBank</title>
     <meta name="description" content="企业数学题库管理平台" />
     <base href="./" />
   </head>
