fix: 修复网站图标和favicon显示问题
- 修复nginx配置中头像文件路径映射问题
- 添加favicon.ico文件支持
- 更新docker-compose.yml正确挂载静态文件
- 修复HTML中favicon引用配置
- 解决网站标签栏图标404错误问题

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- 网站图标配置 -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" href="/avatar/avatar.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/avatar/avatar.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/avatar/avatar.png" />
