--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <!-- 网站图标配置 -->
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" href="/avatar/avatar.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/avatar/avatar.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/avatar/avatar.png" />
-    <link rel="icon" type="image/png" sizes="48x48" href="/avatar/avatar.png" />
-    <link rel="icon" type="image/png" sizes="64x64" href="/avatar/avatar.png" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="icon" href="/avatar/avatar.png" type="image/png" sizes="32x32" />
+    <link rel="icon" href="/avatar/avatar.png" type="image/png" sizes="16x16" />
+    <link rel="icon" href="/avatar/avatar.png" type="image/png" sizes="48x48" />
+    <link rel="icon" href="/avatar/avatar.png" type="image/png" sizes="64x64" />
     <link rel="apple-touch-icon" href="/avatar/avatar.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/avatar/avatar.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="/avatar/avatar.png" />
