修复index当中的标签问题

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,23 +6,23 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.png" type="image/png" />
-    <link rel="icon" href="/avatar/avatar.png" type="image/png" sizes="32x32" />
-    <link rel="icon" href="/avatar/avatar.png" type="image/png" sizes="16x16" />
-    <link rel="icon" href="/avatar/avatar.png" type="image/png" sizes="48x48" />
-    <link rel="icon" href="/avatar/avatar.png" type="image/png" sizes="64x64" />
-    <link rel="apple-touch-icon" href="/avatar/avatar.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/avatar/avatar.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/avatar/avatar.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/avatar/avatar.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/avatar/avatar.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/avatar/avatar.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/avatar/avatar.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/avatar/avatar.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/avatar/avatar.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/avatar/avatar.png" />
-    <link rel="shortcut icon" type="image/png" href="/avatar/avatar.png" />
+    <link rel="icon" href="public/avatar/avatar.png" type="image/png" sizes="32x32" />
+    <link rel="icon" href="public/avatar/avatar.png" type="image/png" sizes="16x16" />
+    <link rel="icon" href="public/avatar/avatar.png" type="image/png" sizes="48x48" />
+    <link rel="icon" href="public/avatar/avatar.png" type="image/png" sizes="64x64" />
+    <link rel="apple-touch-icon" href="public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="public/avatar/avatar.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="public/avatar/avatar.png" />
+    <link rel="shortcut icon" type="image/png" href="public/avatar/avatar.png" />
     <meta name="msapplication-TileColor" content="#4f46e5" />
-    <meta name="msapplication-TileImage" content="/avatar/avatar.png" />
+    <meta name="msapplication-TileImage" content="public/avatar/avatar.png" />
     <meta name="theme-color" content="#4f46e5" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MareateBank</title>
